redo index page

--- a/part_1/index.html
+++ b/part_1/index.html
@@ -13,69 +13,35 @@
   <div class="container">
     <div class="placeholder">
       <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;"/>
-        <div class="row header-inner">
+        <div class="header-inner">
           <div class="header-side">
-            <h1 class="header-side-title">==Project Name==</h1>
-            <h6 class="header-side-description">new coffee shop</h6>
+            <h1 class="header-side-title">Seek Coffee</h1>
+            <h6 class="header-side-description">find your coffee shop</h6>
           </div>
         </div>
         <nav class="nav-bar">
           <ul class="nav-ul">
             <li class="nav-li"><a href="index.html" class="nav-link active">Home</a></li>
-            <li class="nav-li"><a href="about.html" class="nav-link">About</a></li>
-            <li class="nav-li"><a href="Login.html" class="nav-link">Login</a></li>
-            <li class="nav-li"><a href="search.html" class="nav-link">Search</a></li>
+            <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
+            <li class="nav-li"><a href="registration.html" class="nav-link">Login</a></li>
+            <li class="nav-li"><a href="results_sample.html" class="nav-link">Search</a></li>
           </ul>
         </nav>
       </div>
     </div>
 
     <main>
-      <header class="row tm-welcome-section">
-        <h2 class="col-12 text-center tm-section-title">Welcome to ===Project Name===</h2>
+      <header class="welcome-section">
+        <h2 class="text-center title">Welcome to <font color="#1A6692">Seek Coffee</font></h2>
       </header>
-      <!-- Gallery -->
-      <div class="row tm-gallery">
-        <!-- gallery page 1 -->
-        <div id="tm-gallery-page" class="tm-gallery-page">
-          <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-            <figure>
-              <img src="img/gallery/01.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-              <figcaption>
-                <h4 class="tm-gallery-title">Fusce dictum finibus</h4>
-                <p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
-                <p class="tm-gallery-price">$45 / $55</p>
-              </figcaption>
-            </figure>
-          </article>
-          <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-            <figure>
-              <img src="img/gallery/02.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-              <figcaption>
-                <h4 class="tm-gallery-title">Aliquam sagittis</h4>
-                <p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
-                <p class="tm-gallery-price">$65 / $70</p>
-              </figcaption>
-            </figure>
-          </article>
 
-          <div class="tm-section tm-container-inner">
-            <div class="row">
-              <div class="col-md-6">
-                <figure class="NoCoffee">
-                  <img src="img/NoCoffee.png" alt="Image" class="img-fluid" />
-                </figure>
-              </div>
-              <div class="col-md-6">
-                <div class="tm-description-box">
-                  <h4 class="tm-gallery-title">Oops, that's the end of the page</h4>
-                  <p class="tm-mb-45">Didn't find your loved one? Add it now!</p>
-                  <a href="add.html" class="tm-btn tm-btn-default tm-right">Add a coffee shop</a>
-                </div>
-              </div>
-            </div>
-          </div>
+
     </main>
+
+		<footer>
+  		<p>Page created by: Haoyang Tao, Fang Ye</p>
+  		<p>Contact information: <a href="mailto:taoh4@mcmaster.ca">click this</a>.</p>
+		</footer>
 </body>
 
 </html>
