--- a/part_1/index.html
+++ b/part_1/index.html
@@ -35,6 +35,69 @@
         <h2 class="text-center title">Welcome to <font color="#1A6692">Seek Coffee</font></h2>
       </header>
 
+			<!-- Sample Objects -->
+			<div class="obj-container">
+				<div class="objects">
+					<a class="img-ref" href="individual_sample.html">
+						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
+						<img src="img/gallery/default.jpg" class="sample-img"/>
+					</a>
+					<div class="description">
+						<h4 class="des-title">A Fake Coffee Shop</h4>
+						<p class="des-text">This coffee shop is Null.</p>
+						<p class="des-price">~$20</p>
+					</div>
+				</div>
+
+				<div class="objects">
+					<a class="img-ref" href="individual_sample.html">
+						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
+						<img src="img/gallery/default.jpg" class="sample-img"/>
+					</a>
+					<div class="description">
+						<h4 class="des-title">Second Fake Coffee Shop</h4>
+						<p class="des-text">This coffee shop is Nil.</p>
+						<p class="des-price">~$26</p>
+					</div>
+				</div>
+
+				<div class="objects">
+					<a class="img-ref" href="individual_sample.html">
+						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
+						<img src="img/gallery/default.jpg" class="sample-img"/>
+					</a>
+					<div class="description">
+						<h4 class="des-title">Third Coffee Shop</h4>
+						<p class="des-text">This coffee shop is an empty set.</p>
+						<p class="des-price">~$50</p>
+					</div>
+				</div>
+
+				<div class="objects">
+					<a class="img-ref" href="individual_sample.html">
+						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
+						<img src="img/gallery/default.jpg" class="sample-img"/>
+					</a>
+					<div class="description">
+						<h4 class="des-title">Super Expensive Coffee Shop</h4>
+						<p class="des-text">This coffee shop is really expensive.</p>
+						<p class="des-price">~$5000</p>
+					</div>
+				</div>
+
+				<div class="objects">
+					<a class="img-ref" href="individual_sample.html">
+						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
+						<img src="img/gallery/default.jpg" class="sample-img"/>
+					</a>
+					<div class="description">
+						<h4 class="des-title">Super Duper Fake Coffee Shop</h4>
+						<p class="des-text">This coffee shop is super fake.</p>
+						<p class="des-price">~$4</p>
+					</div>
+				</div>
+
+			</div>
 
     </main>
 
