finish search, sample result page

--- a/part_1/index.html
+++ b/part_1/index.html
@@ -24,7 +24,7 @@
             <li class="nav-li"><a href="index.html" class="nav-link active">Home</a></li>
             <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
             <li class="nav-li"><a href="registration.html" class="nav-link">Login</a></li>
-            <li class="nav-li"><a href="results_sample.html" class="nav-link">Search</a></li>
+            <li class="nav-li"><a href="search.html" class="nav-link">Search</a></li>
           </ul>
         </nav>
       </div>
@@ -32,7 +32,7 @@
 
     <main>
       <header class="welcome-section">
-        <h2 class="text-center title">Welcome to <font color="#1A6692">Seek Coffee</font></h2>
+        <h2 class="title">Welcome to <font color="#1A6692">Seek Coffee</font></h2>
       </header>
 
 			<!-- Sample Objects -->
@@ -98,10 +98,18 @@
 				</div>
 
 			</div>
-
     </main>
 
+		<div class="end-of-page">
+			<img src="img/NoCoffee.png"/ class="nocoffee-img">
+			<div class="end-of-page-text">
+				<h3 class="des-title">That's the end of the home page!</h3>
+				<p> Didn't find your loved one? <a href="submission.html">Add it!</a></p>
+			</div>
+		</div>
+
 		<footer>
+			<hr>
   		<p>Page created by: Haoyang Tao, Fang Ye</p>
   		<p>Contact information: <a href="mailto:taoh4@mcmaster.ca">click this</a>.</p>
 		</footer>
