--- a/part_1/submission.html
+++ b/part_1/submission.html
@@ -6,22 +6,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 , shrink-to-fit=no">
     <!-- Title -->
-    <title>Coffee Shops Submission - TY</title>
+    <title>Coffee Shops Submission</title>
     <!-- Goolge fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
     <!-- External style -->
+    <link rel="stylesheet" href="assets/css/index-style.css">
     <link rel="stylesheet" href="assets/css/user_registration.css">
 </head>
 
 <body>
-    <header>
-        <div id="header">
-            This is header
+    <!-- Begin Header and menue
+	================================================== -->
+    <div class="container">
+        <div class="placeholder">
+            <div class="header"
+                style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;" />
+            <div class="header-inner">
+                <div class="header-side">
+                    <h1 class="header-side-title">Seek Coffee</h1>
+                    <h6 class="header-side-description">find your coffee shop</h6>
+                </div>
+            </div>
+            <nav class="nav-bar">
+                <ul class="nav-ul">
+                    <li class="nav-li"><a href="index.html" class="nav-link active">Home</a></li>
+                    <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
+                    <li class="nav-li"><a href="registration.html" class="nav-link">Login</a></li>
+                    <li class="nav-li"><a href="search.html" class="nav-link">Search</a></li>
+                </ul>
+            </nav>
         </div>
-    </header>
+    </div>
+    <!-- End Header and menue
+	================================================== -->
 
     <!-- Begin Body content
 	================================================== -->
@@ -44,22 +64,22 @@
                     <label>Location</label>
                     <div class="flex-left">
                         <div>
-                        <label>Latitude:</label>
-                        <input type="text" id="form-lattitude" placeholder="e.g. 44.00000"></input>
+                            <label>Latitude:</label>
+                            <input type="text" id="form-lattitude" placeholder="e.g. 44.00000"></input>
+                        </div>
+                        <div>
+                            <label>Longitude:</label>
+                            <input type="text" id="form-longitude" placeholder="e.g. -70.00000"></input>
+                        </div>
                     </div>
-                    <div>
-                        <label>Longitude:</label>
-                        <input type="text" id="form-longitude" placeholder="e.g. -70.00000"></input>
+                    <div class="form-group-lable-and-input flex-left">
+                        <label>Upload Image</label>
+                        <input type="file"></input>
                     </div>
-                </div>
-                <div class="form-group-lable-and-input flex-left">
-                    <label>Upload Image</label>
-                    <input type="file"></input>
-                </div>
 
-                <div>
-                    <input class="btn" type="button" value="Submit">
-                </div>
+                    <div>
+                        <input class="btn" type="button" value="Submit">
+                    </div>
             </form>
         </div>
 
@@ -70,9 +90,9 @@
     <!-- Begin Footer
 	================================================== -->
     <footer>
-        <div id="footer">
-            This is footer
-        </div>
+        <hr>
+        <p>Page created by: Haoyang Tao, Fang Ye</p>
+        <p>Contact information: <a href="mailto:taoh4@mcmaster.ca">click this</a>.</p>
     </footer>
     <!-- End Footer
 	================================================== -->
