--- a/part_1/individual_sample.html
+++ b/part_1/individual_sample.html
@@ -51,7 +51,7 @@
             <div>
                 <!-- img with creative comons license, from https://images.app.goo.gl/y3xtUHUSn13LiotM8 -->
                 <div class="coffee-shop-img">
-                    <img src="img/coffee-shop-1.jpg" width="100%" alt="Coffee Shop">
+                    <img src="img/coffee-shop-1.jpg" alt="Coffee Shop">
                 </div>
 
                 <!-- Coffee shop information, including coffee shop name, description, ratings and the number of reviews -->
@@ -101,7 +101,7 @@
                 <h1 class="margin-left-10">Location</h1>
                 <!-- img with screenshot from goole map -->
                 <div class="individual-map">
-                    <img src="img/map-img.png" width="100%" alt="Map">
+                    <img src="img/map-img.png" alt="Map">
                 </div>
             </div>
             <hr />
