--- a/part_1/registration.html
+++ b/part_1/registration.html
@@ -21,8 +21,8 @@
 	================================================== -->
     <div class="container">
         <div class="placeholder">
-            <div class="header"
-                style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;" />
+            <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;"/>
+
             <div class="header-inner">
                 <div class="header-side">
                     <h1 class="header-side-title">Seek Coffee</h1>
@@ -52,25 +52,25 @@
                 </div>
                 <div class="form-group-lable-and-input">
                     <label>User Name </label>
-                    <input type="text" id="name"></input>
+                    <input type="text" id="name">
                 </div>
                 <div class="form-group-lable-and-input">
                     <label>Email </label>
-                    <input type="text" id="email"></input>
+                    <input type="text" id="email">
                 </div>
                 <div class="form-group-lable-and-input">
                     <label>Password </label>
-                    <input type="password" id="password"></input>
+                    <input type="password" id="password">
                 </div>
                 <div class="form-group-lable-and-input">
                     <label>Comfirm Password </label>
-                    <input type="password" id="confirmPassword"></input>
+                    <input type="password" id="confirmPassword">
                 </div>
                 <div class="form-group-lable-and-input">
                     <label>Country </label>
                     <select class="select-box">
-                        <option key="Canada" value="Canada">Canada</option>
-                        <option key="USA" value="USA">USA</option>
+                        <option value="Canada">Canada</option>
+                        <option value="USA">USA</option>
                     </select>
                 </div>
                 <div class="form-group-lable-and-input">
