--- a/part_1/submission.html
+++ b/part_1/submission.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="form-group-lable-and-input">
                     <label>Name of Coffee Shop</label>
-                    <input type="text" id="name"></input>
+                    <input type="text" id="name">
                 </div>
                 <div class="form-group-lable-and-input">
                     <label>Description</label>
@@ -65,21 +65,22 @@
                     <div class="flex-left">
                         <div>
                             <label>Latitude:</label>
-                            <input type="text" id="form-lattitude" placeholder="e.g. 44.00000"></input>
+                            <input type="text" id="form-lattitude" placeholder="e.g. 44.00000">
                         </div>
                         <div>
                             <label>Longitude:</label>
-                            <input type="text" id="form-longitude" placeholder="e.g. -70.00000"></input>
+                            <input type="text" id="form-longitude" placeholder="e.g. -70.00000">
                         </div>
                     </div>
-                    <div class="form-group-lable-and-input flex-left">
-                        <label>Upload Image</label>
-                        <input type="file"></input>
-                    </div>
+                </div>
+                <div class="form-group-lable-and-input flex-left">
+                    <label>Upload Image</label>
+                    <input type="file">
+                </div>
 
-                    <div>
-                        <input class="btn" type="button" value="Submit">
-                    </div>
+                <div>
+                    <input class="btn" type="button" value="Submit">
+                </div>
             </form>
         </div>
 
