--- a/part_1/results_sample.html
+++ b/part_1/results_sample.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Search Result</title>
-	<link href="assets/css/search-result-style.css" rel="stylesheet" />
+		<link href="assets/css/index-style.css" rel="stylesheet">
+	  <link rel="stylesheet" href="assets/css/user_registration.css">
 </head>
 
 <body>
   <div class="container">
     <div class="placeholder">
-      <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;"/>
+      <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;">
         <div class="header-inner">
           <div class="header-side">
             <h1 class="header-side-title">Seek Coffee</h1>
@@ -30,80 +31,83 @@
       </div>
     </div>
 
-    <div class="obj-container">
-      <div class="objects">
-        <a class="img-ref" href="individual_sample.html">
-          <!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
-          <img src="img/gallery/default.jpg" class="sample-img"/>
-        </a>
-        <div class="description">
-          <h4 class="des-title">A Fake Coffee Shop</h4>
-          <p class="des-text">This coffee shop is Null.</p>
-          <p class="des-price">~$20</p>
-        </div>
-      </div>
+    <main>
+      <header class="welcome-section">
+        <h2 class="title">Search Result</font></h2>
+      </header>
 
-      <div class="objects">
-        <a class="img-ref" href="individual_sample.html">
-          <!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
-          <img src="img/gallery/default.jpg" class="sample-img"/>
-        </a>
-        <div class="description">
-          <h4 class="des-title">Second Fake Coffee Shop</h4>
-          <p class="des-text">This coffee shop is Nil.</p>
-          <p class="des-price">~$26</p>
-        </div>
-      </div>
+			<!-- Sample Objects -->
+			<div class="obj-container">
+				<div class="objects">
+					<a class="img-ref" href="individual_sample.html">
+						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
+						<img src="img/gallery/default.jpg" class="sample-img" alt="Coffee Shop Picture"/>
+					</a>
+					<div class="description">
+						<h4 class="des-title">A Fake Coffee Shop</h4>
+						<p class="des-text">This coffee shop is Null.</p>
+					</div>
+				</div>
 
-      <div class="objects">
-        <a class="img-ref" href="individual_sample.html">
-          <!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
-          <img src="img/gallery/default.jpg" class="sample-img"/>
-        </a>
-        <div class="description">
-          <h4 class="des-title">Third Coffee Shop</h4>
-          <p class="des-text">This coffee shop is an empty set.</p>
-          <p class="des-price">~$50</p>
-        </div>
-      </div>
+				<div class="objects">
+					<a class="img-ref" href="individual_sample.html">
+						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
+						<img src="img/gallery/default.jpg" class="sample-img" alt="Coffee Shop Picture"/>
+					</a>
+					<div class="description">
+						<h4 class="des-title">Second Fake Coffee Shop</h4>
+						<p class="des-text">This coffee shop is Nil.</p>
+					</div>
+				</div>
 
-      <div class="objects">
-        <a class="img-ref" href="individual_sample.html">
-          <!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
-          <img src="img/gallery/default.jpg" class="sample-img"/>
-        </a>
-        <div class="description">
-          <h4 class="des-title">Super Expensive Coffee Shop</h4>
-          <p class="des-text">This coffee shop is really expensive.</p>
-          <p class="des-price">~$5000</p>
-        </div>
-      </div>
+				<div class="objects">
+					<a class="img-ref" href="individual_sample.html">
+						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
+						<img src="img/gallery/default.jpg" class="sample-img" alt="Coffee Shop Picture"/>
+					</a>
+					<div class="description">
+						<h4 class="des-title">Third Coffee Shop</h4>
+						<p class="des-text">This coffee shop is an empty set.</p>
+					</div>
+				</div>
 
-      <div class="objects">
-        <a class="img-ref" href="individual_sample.html">
-          <!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
-          <img src="img/gallery/default.jpg" class="sample-img"/>
-        </a>
-        <div class="description">
-          <h4 class="des-title">Super Duper Fake Coffee Shop</h4>
-          <p class="des-text">This coffee shop is super fake.</p>
-          <p class="des-price">~$4</p>
-        </div>
-      </div>
+				<div class="objects">
+					<a class="img-ref" href="individual_sample.html">
+						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
+						<img src="img/gallery/default.jpg" class="sample-img" alt="Coffee Shop Picture"/>
+					</a>
+					<div class="description">
+						<h4 class="des-title">Super Expensive Coffee Shop</h4>
+						<p class="des-text">This coffee shop is really expensive.</p>
+					</div>
+				</div>
 
-    </div>
-    <div class="end-of-page">
-      <img src="img/NoCoffee.png"/ class="nocoffee-img">
-      <div class="end-of-page-text">
-        <h3 class="des-title">That's the end of the home page!</h3>
-        <p> Didn't find your loved one? <a href="submission.html">Add it!</a></p>
-      </div>
-    </div>
+				<div class="objects">
+					<a class="img-ref" href="individual_sample.html">
+						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
+						<img src="img/gallery/default.jpg" class="sample-img" alt="Coffee Shop Picture"/>
+					</a>
+					<div class="description">
+						<h4 class="des-title">Super Duper Fake Coffee Shop</h4>
+						<p class="des-text">This coffee shop is super fake.</p>
+					</div>
+				</div>
+			</div>
+    </main>
 
-    <footer>
-      <hr>
-      <p>Page created by: Haoyang Tao, Fang Ye</p>
-      <p>Contact information: <a href="mailto:taoh4@mcmaster.ca">click this</a>.</p>
-    </footer>
+		<div class="end-of-page">
+			<img src="img/NoCoffee.png" class="nocoffee-img" alt="No Coffee Picture">
+			<div class="end-of-page-text">
+				<p> Didn't find your loved one? <a href="submission.html">Add it!</a></p>
+			</div>
+		</div>
+	</div>
+
+		<footer>
+			<hr>
+  		<p>Page created by: Haoyang Tao, Fang Ye</p>
+  		<p>Contact information: <a href="mailto:taoh4@mcmaster.ca">click this</a>.</p>
+		</footer>
 </body>
+
 </html>
