corrections regarding format, and minor errors

--- a/part_1/search.html
+++ b/part_1/search.html
@@ -2,11 +2,20 @@
 <html>
 
 <head>
-	<meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Search</title>
-	<link href="assets/css/search-style.css" rel="stylesheet" />
+	<!-- Meta -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0 , shrink-to-fit=no">
+	<!-- Title -->
+	<title>Individual Coffee Shop</title>
+	<!-- Goolge fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+	<!-- font awesome -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<!-- External style -->
+	<link rel="stylesheet" href="assets/css/index-style.css">
+	<link rel="stylesheet" href="assets/css/user_registration.css">
 </head>
 
 <body>
