--- a/part_1/index.html
+++ b/part_1/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Home page</title>
-		<link href="assets/css/index-style.css" rel="stylesheet">
-	  <link rel="stylesheet" href="assets/css/user_registration.css">
+	<!-- Meta -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0 , shrink-to-fit=no">
+	<!-- Title -->
+	<title>Individual Coffee Shop</title>
+	<!-- Goolge fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+	<!-- font awesome -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<!-- External style -->
+	<link rel="stylesheet" href="assets/css/index-style.css">
+	<link rel="stylesheet" href="assets/css/user_registration.css">
 </head>
 
 <body>
@@ -46,6 +54,27 @@
 					<div class="description">
 						<h4 class="des-title">A Fake Coffee Shop</h4>
 						<p class="des-text">This coffee shop is Null.</p>
+						<div class="rating-container">
+								<div class="rating">
+										<!-- a star icon with filling -->
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<!-- a star icon with half filling -->
+										<span>
+												<i class="fa fa-star-half-o" aria-hidden="true"></i>
+										</span>
+								</div>
+						</div>
 					</div>
 				</div>
 
@@ -57,6 +86,27 @@
 					<div class="description">
 						<h4 class="des-title">Second Fake Coffee Shop</h4>
 						<p class="des-text">This coffee shop is Nil.</p>
+						<div class="rating-container">
+								<div class="rating">
+										<!-- a star icon with filling -->
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<!-- a star icon with half filling -->
+										<span>
+												<i class="fa fa-star-half-o" aria-hidden="true"></i>
+										</span>
+								</div>
+						</div>
 					</div>
 				</div>
 
@@ -68,6 +118,27 @@
 					<div class="description">
 						<h4 class="des-title">Third Coffee Shop</h4>
 						<p class="des-text">This coffee shop is an empty set.</p>
+						<div class="rating-container">
+								<div class="rating">
+										<!-- a star icon with filling -->
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<!-- a star icon with half filling -->
+										<span>
+												<i class="fa fa-star-half-o" aria-hidden="true"></i>
+										</span>
+								</div>
+						</div>
 					</div>
 				</div>
 
@@ -79,6 +150,27 @@
 					<div class="description">
 						<h4 class="des-title">Super Expensive Coffee Shop</h4>
 						<p class="des-text">This coffee shop is really expensive.</p>
+						<div class="rating-container">
+								<div class="rating">
+										<!-- a star icon with filling -->
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<!-- a star icon with half filling -->
+										<span>
+												<i class="fa fa-star-half-o" aria-hidden="true"></i>
+										</span>
+								</div>
+						</div>
 					</div>
 				</div>
 
@@ -90,6 +182,27 @@
 					<div class="description">
 						<h4 class="des-title">Super Duper Fake Coffee Shop</h4>
 						<p class="des-text">This coffee shop is super fake.</p>
+						<div class="rating-container">
+								<div class="rating">
+										<!-- a star icon with filling -->
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<span>
+												<i class="fa fa-star" aria-hidden="true"></i>
+										</span>
+										<!-- a star icon with half filling -->
+										<span>
+												<i class="fa fa-star-half-o" aria-hidden="true"></i>
+										</span>
+								</div>
+						</div>
 					</div>
 				</div>
 			</div>
