--- a/part_1/registration.html
+++ b/part_1/registration.html
@@ -31,9 +31,9 @@
             </div>
             <nav class="nav-bar">
                 <ul class="nav-ul">
-                    <li class="nav-li"><a href="index.html" class="nav-link active">Home</a></li>
+                    <li class="nav-li"><a href="index.html" class="nav-link">Home</a></li>
                     <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
-                    <li class="nav-li"><a href="registration.html" class="nav-link">Login</a></li>
+                    <li class="nav-li"><a href="registration.html" class="nav-link active">Login</a></li>
                     <li class="nav-li"><a href="search.html" class="nav-link">Search</a></li>
                 </ul>
             </nav>
