add meta-data, microdata and video

--- a/part_1/registration.html
+++ b/part_1/registration.html
@@ -21,22 +21,22 @@
 	================================================== -->
     <div class="container">
         <div class="placeholder">
-            <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;"/>
-
-            <div class="header-inner">
-                <div class="header-side">
-                    <h1 class="header-side-title">Seek Coffee</h1>
-                    <h6 class="header-side-description">find your coffee shop</h6>
+            <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;">
+                <div class="header-inner">
+                    <div class="header-side">
+                        <h1 class="header-side-title">Seek Coffee</h1>
+                        <h6 class="header-side-description">find your coffee shop</h6>
+                    </div>
                 </div>
+                <nav class="nav-bar">
+                    <ul class="nav-ul">
+                        <li class="nav-li"><a href="index.html" class="nav-link active">Home</a></li>
+                        <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
+                        <li class="nav-li"><a href="registration.html" class="nav-link">Login</a></li>
+                        <li class="nav-li"><a href="search.html" class="nav-link">Search</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="nav-bar">
-                <ul class="nav-ul">
-                    <li class="nav-li"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
-                    <li class="nav-li"><a href="registration.html" class="nav-link active">Login</a></li>
-                    <li class="nav-li"><a href="search.html" class="nav-link">Search</a></li>
-                </ul>
-            </nav>
         </div>
     </div>
     <!-- End Header and menue
@@ -77,7 +77,8 @@
                     <div id="user-agreement">
                         <input class="checkbox" type="checkbox" value="user-agreement">
                         Check here to indicate that you have read and agree to TY's
-                        <a class="legal-link" href="/4ww3project/part_1/#">terms of Service </a> "nd acknowledge TY's
+                        <a class="legal-link" href="/4ww3project/part_1/#">terms of Service </a> "nd acknowledge
+                        TY's
                         <a class="legal-link" href="/4ww3project/part_1/#"> Privacy Policy </a>.
                     </div>
                 </div>
