--- a/part_1/submission.html
+++ b/part_1/submission.html
@@ -18,26 +18,26 @@
 </head>
 
 <body>
-    <!-- Begin Header and menue
+        <!-- Begin Header and menue
 	================================================== -->
     <div class="container">
         <div class="placeholder">
-            <div class="header"
-                style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;" />
-            <div class="header-inner">
-                <div class="header-side">
-                    <h1 class="header-side-title">Seek Coffee</h1>
-                    <h6 class="header-side-description">find your coffee shop</h6>
+            <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;">
+                <div class="header-inner">
+                    <div class="header-side">
+                        <h1 class="header-side-title">Seek Coffee</h1>
+                        <h6 class="header-side-description">find your coffee shop</h6>
+                    </div>
                 </div>
+                <nav class="nav-bar">
+                    <ul class="nav-ul">
+                        <li class="nav-li"><a href="index.html" class="nav-link active">Home</a></li>
+                        <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
+                        <li class="nav-li"><a href="registration.html" class="nav-link">Login</a></li>
+                        <li class="nav-li"><a href="search.html" class="nav-link">Search</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="nav-bar">
-                <ul class="nav-ul">
-                    <li class="nav-li"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-li"><a href="submission.html" class="nav-link active">Submission</a></li>
-                    <li class="nav-li"><a href="registration.html" class="nav-link">Login</a></li>
-                    <li class="nav-li"><a href="search.html" class="nav-link">Search</a></li>
-                </ul>
-            </nav>
         </div>
     </div>
     <!-- End Header and menue
@@ -75,6 +75,11 @@
                 </div>
                 <div class="form-group-lable-and-input flex-left">
                     <label>Upload Image</label>
+                    <input type="file">
+                </div>
+
+                <div class="form-group-lable-and-input flex-left">
+                    <label>Upload Video</label>
                     <input type="file">
                 </div>
 
