Fix layout on phone

--- a/part_1/index.html
+++ b/part_1/index.html
@@ -32,7 +32,7 @@
           <ul class="nav-ul">
             <li class="nav-li"><a href="index.html" class="nav-link active">Home</a></li>
             <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
-            <li class="nav-li"><a href="registration.html" class="nav-link">Login</a></li>
+            <li class="nav-li"><a href="registration.html" class="nav-link">Registration</a></li>
             <li class="nav-li"><a href="search.html" class="nav-link">Search</a></li>
           </ul>
         </nav>
@@ -41,7 +41,10 @@
 
     <main>
       <header class="welcome-section">
-        <h2 class="title">Welcome to <font color="#1A6692">Seek Coffee</font></h2>
+				<div class="title">
+        	<span>Welcome to</span>
+					<span class="colored-title">Seek Coffee</span>
+			</div>
       </header>
 
 			<!-- Sample Objects -->
