--- a/part_1/search.html
+++ b/part_1/search.html
@@ -32,7 +32,7 @@
           <ul class="nav-ul">
             <li class="nav-li"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
-            <li class="nav-li"><a href="registration.html" class="nav-link">Login</a></li>
+            <li class="nav-li"><a href="registration.html" class="nav-link">Registration</a></li>
             <li class="nav-li"><a href="search.html" class="nav-link active">Search</a></li>
           </ul>
         </nav>
