--- a/part_1/individual_sample.html
+++ b/part_1/individual_sample.html
@@ -52,7 +52,7 @@
                     <ul class="nav-ul">
                         <li class="nav-li"><a href="index.html" class="nav-link active">Home</a></li>
                         <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
-                        <li class="nav-li"><a href="registration.html" class="nav-link">Login</a></li>
+                        <li class="nav-li"><a href="registration.html" class="nav-link">Registration</a></li>
                         <li class="nav-li"><a href="search.html" class="nav-link">Search</a></li>
                     </ul>
                 </nav>
