--- a/part_1/results_sample.html
+++ b/part_1/results_sample.html
@@ -25,7 +25,7 @@
           <ul class="nav-ul">
             <li class="nav-li"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
-            <li class="nav-li"><a href="registration.html" class="nav-link">Login</a></li>
+            <li class="nav-li"><a href="registration.html" class="nav-link">Registration</a></li>
             <li class="nav-li"><a href="search.html" class="nav-link active">Search</a></li>
           </ul>
         </nav>
@@ -38,15 +38,15 @@
       </header>
 
 			<!-- Sample Objects -->
-			<div class="obj-container">
-				<div class="objects">
+			<div class="search-obj-container">
+				<div class="search-objects">
 					<a class="img-ref" href="individual_sample.html">
 						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
 						<img src="img/gallery/default.jpg" class="sample-img" alt="Coffee Shop Picture"/>
 					</a>
 					<div class="description">
-						<h4 class="des-title">A Fake Coffee Shop</h4>
-						<p class="des-text">This coffee shop is Null.</p>
+						<h4 class="des-title">Durand Coffee</h4>
+						<p class="des-text">A great coffee shop in Hamilton downtown.</p>
 						<div class="rating-container">
 								<div class="rating">
 										<!-- a star icon with filling -->
@@ -71,7 +71,7 @@
 					</div>
 				</div>
 
-				<div class="objects">
+				<div class="search-objects">
 					<a class="img-ref" href="individual_sample.html">
 						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
 						<img src="img/gallery/default.jpg" class="sample-img" alt="Coffee Shop Picture"/>
@@ -103,101 +103,9 @@
 					</div>
 				</div>
 
-				<div class="objects">
-					<a class="img-ref" href="individual_sample.html">
-						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
-						<img src="img/gallery/default.jpg" class="sample-img" alt="Coffee Shop Picture"/>
-					</a>
-					<div class="description">
-						<h4 class="des-title">Third Coffee Shop</h4>
-						<p class="des-text">This coffee shop is an empty set.</p>
-						<div class="rating-container">
-								<div class="rating">
-										<!-- a star icon with filling -->
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<!-- a star icon with half filling -->
-										<span>
-												<i class="fa fa-star-half-o" aria-hidden="true"></i>
-										</span>
-								</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="objects">
-					<a class="img-ref" href="individual_sample.html">
-						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
-						<img src="img/gallery/default.jpg" class="sample-img" alt="Coffee Shop Picture"/>
-					</a>
-					<div class="description">
-						<h4 class="des-title">Super Expensive Coffee Shop</h4>
-						<p class="des-text">This coffee shop is really expensive.</p>
-						<div class="rating-container">
-								<div class="rating">
-										<!-- a star icon with filling -->
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<!-- a star icon with half filling -->
-										<span>
-												<i class="fa fa-star-half-o" aria-hidden="true"></i>
-										</span>
-								</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="objects">
-					<a class="img-ref" href="individual_sample.html">
-						<!-- img with no copy right, from https://unsplash.com/photos/XtUd5SiX464 -->
-						<img src="img/gallery/default.jpg" class="sample-img" alt="Coffee Shop Picture"/>
-					</a>
-					<div class="description">
-						<h4 class="des-title">Super Duper Fake Coffee Shop</h4>
-						<p class="des-text">This coffee shop is super fake.</p>
-						<div class="rating-container">
-								<div class="rating">
-										<!-- a star icon with filling -->
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<span>
-												<i class="fa fa-star" aria-hidden="true"></i>
-										</span>
-										<!-- a star icon with half filling -->
-										<span>
-												<i class="fa fa-star-half-o" aria-hidden="true"></i>
-										</span>
-								</div>
-						</div>
-					</div>
-				</div>
+			</div>
+			<div class="search-map">
+				<img src="img/map-img.png" alt="Map" class="search-map-img">
 			</div>
     </main>
 
