--- a/part_1/index.html
+++ b/part_1/index.html
@@ -33,6 +33,7 @@
             <li class="nav-li"><a href="index.html" class="nav-link active">Home</a></li>
             <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
             <li class="nav-li"><a href="registration.html" class="nav-link">Registration</a></li>
+						<li class="nav-li"><a class="nav-link">Login</a></li>
             <li class="nav-li"><a href="search.html" class="nav-link">Search</a></li>
           </ul>
         </nav>
