--- a/part_1/results_sample.html
+++ b/part_1/results_sample.html
@@ -2,13 +2,20 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Search</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-		<link href="assets/css/index-style.css" rel="stylesheet">
-	  <link rel="stylesheet" href="assets/css/user_registration.css">
+	<!-- Meta -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0 , shrink-to-fit=no">
+	<!-- Title -->
+	<title>Individual Coffee Shop</title>
+	<!-- Goolge fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+	<!-- font awesome -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<!-- External style -->
+	<link rel="stylesheet" href="assets/css/index-style.css">
+	<link rel="stylesheet" href="assets/css/user_registration.css">
 </head>
 
 <body>
@@ -26,6 +33,7 @@
             <li class="nav-li"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-li"><a href="submission.html" class="nav-link">Submission</a></li>
             <li class="nav-li"><a href="registration.html" class="nav-link">Registration</a></li>
+						<li class="nav-li"><a class="nav-link">Login</a></li>
             <li class="nav-li"><a href="search.html" class="nav-link active">Search</a></li>
           </ul>
         </nav>
