--- a/part_1/index.html
+++ b/part_1/index.html
@@ -20,6 +20,8 @@
 
 <body>
   <div class="container">
+		<!-- Begin Header and menu
+	================================================== -->
     <div class="placeholder">
       <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;">
         <div class="header-inner">
@@ -39,7 +41,11 @@
         </nav>
       </div>
     </div>
+		<!-- End Header and menu
+	================================================== -->
 
+	<!-- Start of Welcome section
+================================================== -->
     <main>
       <header class="welcome-section">
 				<div class="title">
@@ -47,6 +53,8 @@
 					<span class="colored-title">Seek Coffee</span>
 			</div>
       </header>
+			<!-- End of Welcome section
+		================================================== -->
 
 			<!-- Sample Objects -->
 			<div class="obj-container">
@@ -56,8 +64,8 @@
 						<img src="img/gallery/default.jpg" class="sample-img" alt="Coffee Shop Picture"/>
 					</a>
 					<div class="description">
-						<h4 class="des-title">A Fake Coffee Shop</h4>
-						<p class="des-text">This coffee shop is Null.</p>
+						<h4 class="des-title">Durand Coffee</h4>
+						<p class="des-text">A great coffee shop in Hamilton downtown</p>
 						<div class="rating-container">
 								<div class="rating">
 										<!-- a star icon with filling -->
@@ -212,8 +220,10 @@
 			</div>
     </main>
 
+
+		<!-- End of page
+	================================================== -->
 		<div class="end-of-page">
-			<img src="img/NoCoffee.png" class="nocoffee-img" alt="No Coffee Picture">
 			<div class="end-of-page-text">
 				<h3 class="des-title">That's the end of the home page!</h3>
 				<p> Didn't find your loved one? <a href="submission.html">Add it!</a></p>
