--- a/part_1/results_sample.html
+++ b/part_1/results_sample.html
@@ -20,6 +20,8 @@
 
 <body>
   <div class="container">
+		<!-- Begin Header and menu
+	================================================== -->
     <div class="placeholder">
       <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;">
         <div class="header-inner">
@@ -39,6 +41,8 @@
         </nav>
       </div>
     </div>
+		<!-- End Header and menu
+	================================================== -->
 
     <main>
       <header class="welcome-section">
@@ -111,14 +115,17 @@
 					</div>
 				</div>
 
+				<!-- Sample map
+			================================================== -->
 			</div>
 			<div class="search-map">
 				<img src="img/map-img.png" alt="Map" class="search-map-img">
 			</div>
     </main>
 
+		<!-- End of page
+	================================================== -->
 		<div class="end-of-page">
-			<img src="img/NoCoffee.png" class="nocoffee-img" alt="No Coffee Picture">
 			<div class="end-of-page-text">
 				<p> Didn't find your loved one? <a href="submission.html">Add it!</a></p>
 			</div>
