--- a/part_1/search.html
+++ b/part_1/search.html
@@ -19,6 +19,8 @@
 </head>
 
 <body>
+	<!-- Begin Header and menu
+================================================== -->
   <div class="container">
     <div class="placeholder">
       <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;"/>
@@ -39,6 +41,8 @@
         </nav>
       </div>
     </div>
+		<!-- End Header and menu
+	================================================== -->
 
     <main>
         <div class="form-container">
@@ -50,6 +54,9 @@
                     <label>Name: </label>
                     <input type="text" id="name"></input>
                 </div>
+
+								<!-- Drop down menu, filter of stars
+							================================================== -->
                 <div class="form-group-lable-and-input">
                     <label>Stars: </label>
                     <select class="select-box">
@@ -60,6 +67,9 @@
                         <option key="5" value="5">5</option>
                     </select>
                 </div>
+
+								<!-- search button
+							================================================== -->
                 <div>
                   <a href="results_sample.html">
                     <input class="btn" type="button" value="Search">
